--- a/Qt/assets.qrc
+++ b/Qt/assets.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file alias="assets/ui_atlas.zim">../assets/ui_atlas.zim</file>
+        <file alias="assets/ui_atlas.zim">../assets/ui_atlas_nofont.zim</file>
         <file alias="assets/ppge_atlas.zim">../assets/ppge_atlas.zim</file>
     </qresource>
 </RCC>
